# name: test_group_From_file[bar]
  <class 'list'> [
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o This todo came from the C.txt file. | +C.txt',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
          'C.txt',
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o This todo came from the +C.txt file.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
          'C.txt',
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'And +another...',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'B',
        'projects': <class 'tuple'> (
          'another',
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'And +another...',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'B',
        'projects': <class 'tuple'> (
          'another',
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 11),
        'desc': 'And +finally... one:more!',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'one': 'more',
        },
        'priority': 'C',
        'projects': <class 'tuple'> (
          'finally',
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 11),
        'desc': 'And +finally... one:more!',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'one': 'more',
        },
        'priority': 'C',
        'projects': <class 'tuple'> (
          'finally',
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'First item.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'First item.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'high',
        ),
        'create_date': None,
        'desc': 'High-priority item @high',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'A',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'high',
        ),
        'create_date': None,
        'desc': 'High-priority item @high',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'A',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 1),
        'desc': 'Done item',
        'done_date': datetime.date(2022, 1, 10),
        'marked_done': True,
        'metadata': None,
        'priority': 'B',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 1),
        'desc': 'Done item',
        'done_date': datetime.date(2022, 1, 10),
        'marked_done': True,
        'metadata': None,
        'priority': 'B',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 11),
        'desc': 'Item is due:2022-01-31',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'due': '2022-01-31',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 11),
        'desc': 'Item is due:2022-01-31',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'due': '2022-01-31',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
  ]
---
# name: test_group_From_file[foo]
  <class 'list'> [
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'First item.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'First item.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'high',
        ),
        'create_date': None,
        'desc': 'High-priority item @high',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'A',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'high',
        ),
        'create_date': None,
        'desc': 'High-priority item @high',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'A',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'high',
        ),
        'create_date': None,
        'desc': 'High-priority item. | @high',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'A',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'high',
        ),
        'create_date': None,
        'desc': 'High-priority item. @high',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'A',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 1),
        'desc': 'Done item',
        'done_date': datetime.date(2022, 1, 10),
        'marked_done': True,
        'metadata': None,
        'priority': 'B',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 1),
        'desc': 'Done item',
        'done_date': datetime.date(2022, 1, 10),
        'marked_done': True,
        'metadata': None,
        'priority': 'B',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 11),
        'desc': 'Item is due:2022-01-31',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'due': '2022-01-31',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': datetime.date(2022, 1, 11),
        'desc': 'Item is due:2022-01-31',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'due': '2022-01-31',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'stuff',
        ),
        'create_date': datetime.date(1900, 1, 1),
        'desc': 'This +test item is awesome:True and has lots of @stuff too_long:NoWay DoFoo:22',
        'done_date': datetime.date(1999, 1, 1),
        'marked_done': True,
        'metadata': <class 'dict'> {
          'DoFoo': '22',
          'awesome': 'True',
          'too_long': 'NoWay',
        },
        'priority': 'Z',
        'projects': <class 'tuple'> (
          'test',
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'stuff',
        ),
        'create_date': datetime.date(1900, 1, 1),
        'desc': 'This +test item is awesome:True and has lots of @stuff too_long:NoWay DoFoo:22',
        'done_date': datetime.date(1999, 1, 1),
        'marked_done': True,
        'metadata': <class 'dict'> {
          'DoFoo': '22',
          'awesome': 'True',
          'too_long': 'NoWay',
        },
        'priority': 'Z',
        'projects': <class 'tuple'> (
          'test',
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o A lowercase "o" can also be used when running in "strict" mode.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o A lowercase "o" can also be used when running in "strict" mode.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o (N) But this "o" can only be used if a priority is NOT provided.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o (N) But this "o" can only be used if a priority is NOT provided.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': "Don't + make + normal + pluses + projects.",
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': "Don't + make + normal + pluses + projects.",
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'Ditto for keys: with no values.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'Ditto for keys: with no values.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'punctuation',
        ),
        'create_date': None,
        'desc': 'We strip +punctuation. But not if the value:. is just @punctuation, ya:dig?',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'value': '.',
          'ya': 'dig',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
          'punctuation',
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'punctuation',
        ),
        'create_date': None,
        'desc': 'We strip +punctuation. But not if the value:. is just @punctuation, ya:dig?',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'value': '.',
          'ya': 'dig',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
          'punctuation',
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'We allow descriptions to start with projects. | +project',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
          'project',
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': '+project We allow descriptions to start with projects.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
          'project',
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'context',
        ),
        'create_date': None,
        'desc': 'We allow descriptions to start with contexts. | @context',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'context',
        ),
        'create_date': None,
        'desc': '@context We allow descriptions to start with contexts.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': '1234 Todos can start with numbers:5678.',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'numbers': '5678',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': '1234 Todos can start with numbers:5678.',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'numbers': '5678',
        },
        'priority': 'N',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'Todos can easily log their "done times" with this trick. | dtime:1545',
        'done_date': None,
        'marked_done': True,
        'metadata': <class 'dict'> {
          'dtime': '1545',
        },
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'x:1545 Todos can easily log their "done times" with this trick.',
        'done_date': None,
        'marked_done': False,
        'metadata': <class 'dict'> {
          'x': '1545',
        },
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o Double colons should be::ignored.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o Double colons should be::ignored.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'contexts',
        ),
        'create_date': None,
        'desc': "o Sometimes we want to use apostrophe with +project's or @contexts'.",
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
          'project',
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
          'contexts',
        ),
        'create_date': None,
        'desc': "o Sometimes we want to use apostrophe with +project's or @contexts'.",
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
          'project',
        ),
      },
    },
    <class 'dict'> {
      'enchanted_todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o We also ignore double ++pluses and double @@at signs.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
      'post_spells': <class 'list'> [
        'group_projects_contexts_and_metadata',
      ],
      'pre_spells': <class 'list'> [
        'x_tag',
      ],
      'spells': <class 'list'> [
      ],
      'todo': <class 'dict'> {
        'contexts': <class 'tuple'> (
        ),
        'create_date': None,
        'desc': 'o We also ignore double ++pluses and double @@at signs.',
        'done_date': None,
        'marked_done': False,
        'metadata': None,
        'priority': 'O',
        'projects': <class 'tuple'> (
        ),
      },
    },
  ]
---
